--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
-<head>
-	<title>IN Junior</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<title>IN Junior</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+	</head>
+	<body>
 
-</body>
+	</body>
 </html>
