--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<header>
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand nomeLogo" href="#">IN Junior</a>
+		    </div>
+		    <ul class="nav navbar-nav navbar-right">
+		      <li class="active"><a href="#">Home</a></li>
+		      <li><a href="#">Sobre</a></li>
+		      <li><a href="#">Equipe</a></li>
+		    </ul>
+		  </div>
+		</nav>
+	</header>
 
 </body>
 </html>
