--- a/equipe/index.html
+++ b/equipe/index.html
@@ -4,18 +4,22 @@
 		<title>IN Junior</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
-		<!-- <link rel="stylesheet" type="text/css" href="../assets/css/style.css"> -->
-		<link rel="stylesheet" type="text/css" href="equipe.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="rodape.css">
+		
 	</head>
 	<body>
 		<header id="">
 			<div class="fundo">
-				<nav class="navbar">
-					<ol>
+				<nav class="nav navbar navbar-right">
+					<div class="logoInjr">
+
+					</div>
+					<ul>
 						<li><a href="#">HOME</a></li>
 						<li><a href="#">EQUIPE</a></li>
 						<li><a href="#">SOBRE</a></li>
-					</ol>
+					</ul>
 				</nav>
 			</div>
 		</header>
@@ -45,5 +49,43 @@
 				</div>
 			</article>
 		</section>
+		<div class="linha"></div>
+		
+		<footer id="rodape">
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="../assets/img/uff_logo.png" class="logo" />
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="../assets/img/logo.png" class="logo" />
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="../assets/img/logo-ic.png" class="logo" />
+			</div>
+		</footer>
+		<div class="rights">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+				<h4>Todos os direitos reservados</h4>
+			</div>
+		</div>
+
 	</body>
 </html>
+
+<!--
+
+	<div class="col-xs-12 col-sm-12 col-md-4">
+		<h3>Entre em contato conosco</h3>
+		<form>
+			<div class="form-group">
+				<input type="text" class="form-control" name="nome" placeholder="Nome">
+			</div>
+			<div class="form-group">
+				<input type="email" class="form-control" name="nome" placeholder="Email">
+			</div>
+			<textarea class="form-control" rows="5" placeholder="Digite sua mensagem."></textarea>
+			<button type="submit" class="btn btn-primary">Enviar</button>
+		</form>
+	</div>
+
+
+-->
