--- a/equipe/index.html
+++ b/equipe/index.html
@@ -15,7 +15,7 @@
 				<h4>Conheça nossa alcateia. AUUUUU</h4>
 			</div>
 		</header>
-
+		<div class="linha"></div>
 		<section id="equipe">
 			<article class="equipeArticle">
 				<div class="col-xs-12 col-sm-4 col-md-4">
@@ -57,7 +57,6 @@
 				<h3>Empresa Júnior de Computação</h3>
 				<h3>Instituto de Computação UFF</h3>
 				<h4>Rua Passo da Pátria, 156, Sala 115-B, Niterói</h4>
-				
 
 			</div>
 			
@@ -74,6 +73,7 @@
 					<button type="submit" class="btn btn-primary">Enviar</button>
 				</form>
 			</div>
+			<div class="linha"></div>
 			<div class="menu">
 				<nav class="navbar navbar-default">
 					<div class="container-fluid">
