--- a/sobre/index.html
+++ b/sobre/index.html
@@ -16,10 +16,41 @@
 		</header>
 	</header>
 
-	<section id="servicos">
+	<section id="aEmpresa">
+		<div class="linha">
+			<h2>A EMPRESA</h2>
+		</div>
+		<div class="linha">
+			<div class="col-md-6 col-sm-12">
+				<div class="resumo">
+					<p>IN Junior é a empresa júnior de computação da Universidade Federal Fluminense. A empresa nasceu da vontade de promover um ambiente onde a teoria se une com a prática, tendo como seus pilares a Inovação, Inteligência e Integração. Nós buscamos sempre proporcionar ao aluno uma experiência empresarial e empreendedora que contribua para a sua formação acadêmica e amadurecimento pessoal e profissional. Com essa mentalidade, desejamos entregar, para a sociedade, não apenas serviços de excelência a baixo custo, mas também profissionais comprometidos e cidadãos proativos que continuem contribuindo positivamente para o crescimento do país.</p>
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12">
+				<div class="pilares">
+					<h3>MISSÃO</h3>
+					<p>Satisfazer o cliente através da entrega constante de projetos por profissionais realizados.</p>
+					<h3>VISÃO</h3>
+					<p>Ser a EJ de TI com maior entrega de projetos de qualidade.</p>
+					<h3>VALORES</h3>
+					<ul>
+						<li>Sorriso no rosto</li>
+						<li>Trabalhar em alcateia</li>
+						<li>Proatividade</li>
+						<li>Codar por <3</li>
+						<li>Espírito Alpha</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</section>
+	<div class="linha"></div>
 
-
+	<div class="rights">
+		<div class="col-xs-12 col-sm-12 col-md-12">
+			<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
+		</div>
+	</div>
 
 
 	<div class="menu">
