--- a/equipe/index.html
+++ b/equipe/index.html
@@ -5,59 +5,112 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-		<link rel="stylesheet" type="text/css" href="rodape.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
 		
 	</head>
 	<body>
 		<header>
+			<div class="menu">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<div class="navbar-header">
+			    			<a class="navbar-brand nomeLogo" href="../index.html"><img src="../assets/img/logo.png" width="50"></a>
+						</div>
+				    	<ul class="nav navbar-nav navbar-right">
+					    	<li><a href="../index.html">Home</a></li>
+					    	<li><a href="../sobre/index.html">Sobre</a></li>
+				    		<li class="active"><a href="index.html">Equipe</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
 			<div class="caixaHeader">
 				<h1>EQUIPE</h1>
 				<h4>Conheça nossa alcateia. AUUUUU</h4>
 			</div>
 		</header>
 		<div class="linha"></div>
-		<section id="equipe">
-			<article class="equipeArticle">
+
+		<section id="equipes">
+			<article class="sessao">
+				<h2>Presidência</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Matheus Martins</h2>
-					<h3>Presidente</h3>
+					<h3>Matheus Martins</h3>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Nome</h2>
-					<h3>CARGO</h3>
+					<h3>Matheus Martins</h3>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Nome</h2>
-					<h3>CARGO</h3>
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Nome</h2>
-					<h3>CARGO</h3>
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Nome</h2>
-					<h3>CARGO</h3>
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					<img src="../assets/img/presida.jpg" class="rosto" />
-					<h2>Nome</h2>
-					<h3>CARGO</h3>
+					<h3>Matheus Martins</h3>
 				</div>
 			</article>
-		</section
+			<div class="linha"></div>
+
+			<article class="sessao">
+				<h2>Marketing</h2>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+			</article>
+			<div class="linha"></div>
+
+			<article class="sessao">
+				<h2>Projetos</h2>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+			</article>
+			<div class="linha"></div>
+
+			<article class="sessao">
+				<h2>Comércio</h2>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+				</div>
+			</article>
+			<div class="linha"></div>
+
+		</section>
+		<div class="linha"></div>
 		
 		<footer id="rodape">
 			<div class="col-xs-12 col-sm-12 col-md-6">
-				<h2>IN Junior</h2>
-				<h3>Empresa Júnior de Computação</h3>
-				<h3>Instituto de Computação UFF</h3>
-				<h4>Rua Passo da Pátria, 156, Sala 115-B, Niterói</h4>
-
+				<div class="info">
+					<h2>IN Junior</h2>
+					<h3>Empresa Júnior de Computação</h3>
+					<h3>Instituto de Computação UFF</h3>
+					<h4>Rua Passo da Pátria, 156, Sala 115-B, Niterói</h4>
+				</div>
 			</div>
 			
 			<div class="col-xs-12 col-sm-12 col-md-6">
@@ -73,22 +126,6 @@
 					<button type="submit" class="btn btn-primary">Enviar</button>
 				</form>
 			</div>
-			<div class="linha"></div>
-			<div class="menu">
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<div class="navbar-header">
-			    			<a class="navbar-brand nomeLogo" href="../index.html"><img src="../assets/img/logo.png" width="50"></a>
-						</div>
-				    	<ul class="nav navbar-nav navbar-right">
-					    	<li><a href="../index.html">Home</a></li>
-					    	<li><a href="../sobre/index.html">Sobre</a></li>
-				    		<li class="active"><a href="index.html">Equipe</a></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		<div class="linha"></div>
 
 			<!-- LOGOS DA IN, IC e UFF -->
 			<div class="col-xs-12 col-sm-12 col-md-4">
@@ -101,32 +138,13 @@
 				<img src="../assets/img/logo-ic.png" class="logo" />
 			</div>
 		</footer>
+		<div class="linha"></div>
 
 		<div class="rights">
 			<div class="col-xs-12 col-sm-12 col-md-12">
-				<h2></h2>
-				<h3></h3>
 				<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
 			</div>
 		</div>
+		<div class="linha"></div>
 	</body>
 </html>
-
-<!--
-
-	<div class="col-xs-12 col-sm-12 col-md-4">
-		<h3>Entre em contato conosco</h3>
-		<form>
-			<div class="form-group">
-				<input type="text" class="form-control" name="nome" placeholder="Nome">
-			</div>
-			<div class="form-group">
-				<input type="email" class="form-control" name="nome" placeholder="Email">
-			</div>
-			<textarea class="form-control" rows="5" placeholder="Digite sua mensagem."></textarea>
-			<button type="submit" class="btn btn-primary">Enviar</button>
-		</form>
-	</div>
-
-
--->
