Sobre quase pronta

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -46,12 +46,28 @@
 	</section>
 	<div class="linha"></div>
 
+	<section id="estrutura">
+		<div>
+			<h2>ESTRUTURA</h2>
+			<img src="../assets/img/estrutura.jpg" width="80%">
+		</div>
+		<div class="definicao">
+			<div class="col-md-6 col-sm-12 esquerda">
+				<p>Nossa estrutura organizacional baseia-se em uma hierarquia horizontal, permitindo a todos mais autonomia para definir horários e metas.</p>
+			</div>
+			<div class="col-md-6 col-sm-12">
+				<p>Pensamos que é indispensável que todos possam ter liberdade para inovar, criar e buscar novas soluções para os projetos, evoluindo a si mesmo e a empresa.</p>
+			</div>
+		</div>
+	</section>
+
+	<div class="linha"></div>
+
 	<div class="rights">
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
 		</div>
 	</div>
-
 
 	<div class="menu">
 		<nav class="navbar navbar-default">
