inserção de dois elementos

--- a/equipe/index.html
+++ b/equipe/index.html
@@ -41,6 +41,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Presidente</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
