incremento na página de equipes

--- a/equipe/index.html
+++ b/equipe/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
 		
 	</head>
@@ -31,9 +32,11 @@
 		</header>
 		<div class="linha"></div>
 
+		<!-- INICIO DA SESSÃO -->
 		<section id="equipes">
+			<!-- INICIO DA SESSÃO DE PRESIDENCIA -->
 			<article class="sessao">
-				<h2>Presidência</h2>
+				<h2>Diretoria de Presidência</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
@@ -46,12 +49,14 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
 				</div>
 			</article>
 			<div class="linha"></div>
 
+			<!-- INICIO DA SESSÃO DE MARKETING -->
 			<article class="sessao">
-				<h2>Marketing</h2>
+				<h2>Diretoria de Marketing</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
@@ -59,16 +64,19 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Gerente</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
 				</div>
 			</article>
 			<div class="linha"></div>
 
+			<!-- INICIO DA SESSÃO DE PROJETOS -->
 			<article class="sessao">
-				<h2>Projetos</h2>
+				<h2>Diretoria de Projetos</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
@@ -76,16 +84,19 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Gerente</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
 				</div>
 			</article>
 			<div class="linha"></div>
 
+			<!-- INICIO DA SESSÃO DE GESTÃO DE PESSOAS -->
 			<article class="sessao">
-				<h2>Comércio</h2>
+				<h2>Diretoria de Gestão de Pessoas</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
@@ -93,10 +104,12 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Gerente</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
 				</div>
 			</article>
 			<div class="linha"></div>
