--- a/equipe/index.html
+++ b/equipe/index.html
@@ -127,6 +127,7 @@
 				</div>
 			</div>
 			
+			<!-- FORM DE ENVIO DE MENSAGENS PARA CONTATO -->
 			<div class="col-xs-12 col-sm-12 col-md-6">
 				<h3>Entre em contato conosco</h3>
 				<form>
@@ -140,6 +141,7 @@
 					<button type="submit" class="btn btn-primary">Enviar</button>
 				</form>
 			</div>
+			<div class="linha"></div>
 
 			<!-- LOGOS DA IN, IC e UFF -->
 			<div class="col-xs-12 col-sm-12 col-md-4">
@@ -151,8 +153,8 @@
 			<div class="col-xs-12 col-sm-12 col-md-4">
 				<img src="../assets/img/logo-ic.png" class="logo" />
 			</div>
+			<div class="linha"></div>
 		</footer>
-		<div class="linha"></div>
 
 		<div class="rights">
 			<div class="col-xs-12 col-sm-12 col-md-12">
