home page em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -3,40 +3,113 @@
 	<title>IN Junior</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
-<body>
-	
-	<header>
-		<div class="caixaHeader">
-			<img src="assets/img/logo.png" height="150">
-		</div>
-	</header>
-
-	<section>
-	</section>
-
-	<section>
-	</section>
-
-	<footer>
-	</footer>
-
-
-
-
-	<div class="menu">
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<div class="navbar-header">
-	    			<a class="navbar-brand nomeLogo" href="index.html"><img src="assets/img/logo.png" width="50"></a>
-				</div>
-		    	<ul class="nav navbar-nav navbar-right">
-			    	<li class="active"><a href="index.html">Home</a></li>
-			    	<li><a href="sobre/index.html">Sobre</a></li>
-		    		<li><a href="equipe/index.html">Equipe</a></li>
-				</ul>
+	<body>
+		
+		<header>
+			<div class="caixaHeader">
+				<img src="assets/img/logo.png" height="150">
 			</div>
-		</nav>
-	</div>
-</body>
+			<div class="menu">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<div class="navbar-header">
+			    			<a class="navbar-brand nomeLogo" href="index.html"><img src="assets/img/logo.png" width="50"></a>
+						</div>
+				    	<ul class="nav navbar-nav navbar-right">
+					    	<li class="active"><a href="index.html">Home</a></li>
+					    	<li><a href="sobre/index.html">Sobre</a></li>
+				    		<li><a href="equipe/index.html">Equipe</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</header>
+
+		<section id="home">
+			<article class="sessaoHome">
+				<div class="barraSessao">
+					<div class="col-xs-12 col-sm-12 col-md-12">
+						<h2>SERVIÇOS</h2>
+					</div>
+				</div>
+				<div class="linha"></div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>Consultoria em TI</h3>
+						<p>
+							Se deseja aperfeiçoar, organizar, modificar ou resolver algum problema na área de Tecnologia da Informação do seu negócio, fale conosco! Nós oferecemos consultoria especializada para sua empresa, analisamos seu problema e oferecemos a solução mais inteligente, nunca estar atualizado tecnologicamente foi tão fácil. Contate-nos e solicite um orçamento.
+						</p>
+					</div>
+				</div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>Sistemas Web</h3>
+						<p>
+							Se o seu empreendimento necessita de um gerenciamento mais otimizado para suas vendas, projetos, estoque, eventos, entre outros. A IN Junior oferece a solução para seu negócio através da criação de sistemas de gerenciamento personalizados que irão automatizar seus processos, com maio segurança e eficiência, proporcionando o desenvolvimento da sua empresa. 
+						</p>
+					</div>
+				</div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>Sites</h3>
+						<p>
+							A Internet é o maior canal de comunicação dos dias atuais, nós criamos a melhor representação para sua marca nesse universo. A IN Junior oferece a solução mais aprimorada para criação do seu site, buscando sempre inovação, segurança e qualidade transformamos suas ideias em realidade.
+						</p>
+					</div>
+				</div>
+			</article>
+			<div class="linha"></div>
+		</section>
+		<div class="linha"></div>
+
+
+
+		<footer id="rodape">
+			<div class="col-xs-12 col-sm-12 col-md-6">
+				<div class="info">
+					<h2>IN Junior</h2>
+					<h3>Empresa Júnior de Computação</h3>
+					<h3>Instituto de Computação UFF</h3>
+					<h4>Rua Passo da Pátria, 156, Sala 115-B, Niterói</h4>
+				</div>
+			</div>
+			
+			<!-- FORM DE ENVIO DE MENSAGENS PARA CONTATO -->
+			<div class="col-xs-12 col-sm-12 col-md-6">
+				<h3>Entre em contato conosco</h3>
+				<form>
+					<div class="form-group">
+						<input type="text" class="form-control" name="nome" placeholder="Nome">
+					</div>
+					<div class="form-group">
+						<input type="email" class="form-control" name="nome" placeholder="Email">
+					</div>
+					<textarea class="form-control" rows="5" placeholder="Digite sua mensagem."></textarea>
+					<button type="submit" class="btn btn-primary">Enviar</button>
+				</form>
+			</div>
+			<div class="linha"></div>
+
+			<!-- LOGOS DA IN, IC e UFF -->
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="assets/img/uff_logo.png" class="logo" />
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="assets/img/logo.png" class="logo" />
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<img src="assets/img/logo-ic.png" class="logo" />
+			</div>
+			<div class="linha"></div>
+		</footer>
+
+		<div class="rights">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+				<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
+			</div>
+		</div>
+		<div class="linha"></div>
+	</body>
 </html>
