--- a/equipe/index.html
+++ b/equipe/index.html
@@ -5,8 +5,6 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
 		
 	</head>
 	<body>
@@ -35,7 +33,7 @@
 		<!-- INICIO DA SESSÃO -->
 		<section id="equipes">
 			<!-- INICIO DA SESSÃO DE PRESIDENCIA -->
-			<article class="sessao">
+			<article class="sessaoEquipes">
 				<h2>Diretoria de Presidência</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
