sessão na home adicionada

--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
 				</div>
 			</article>
 			<div class="linha"></div>
+
+			<article class="sessaoHome">
+				<div class="barraSessao">
+					<div class="col-xs-12 col-sm-12 col-md-12">
+						<h2>PORTIFÓLIO</h2>
+					</div>
+				</div>
+				<div class="linha"></div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>IMAGEM</h3>
+					</div>
+				</div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>IMAGEM</h3>
+					</div>
+					</div>
+				</div>
+				<div class="infoSessao">
+					<div class="col-xs-12 col-sm-12 col-md-4">
+						<h3>IMAGEM</h3>
+					</div>
+				</div>
+			</article>
+			<div class="linha"></div>
 		</section>
 		<div class="linha"></div>
 
