--- a/equipe/index.html
+++ b/equipe/index.html
@@ -8,24 +8,29 @@
 		
 	</head>
 	<body>
-		<header>
-			<div class="menu">
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<div class="navbar-header">
-			    			<a class="navbar-brand nomeLogo" href="../index.html"><img src="../assets/img/logo.png" width="50"></a>
-						</div>
-				    	<ul class="nav navbar-nav navbar-right">
-					    	<li><a href="../index.html">Home</a></li>
-					    	<li><a href="../sobre/index.html">Sobre</a></li>
-				    		<li class="active"><a href="index.html">Equipe</a></li>
-						</ul>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a href="../index.html" class="navbar-brand"><h3>IN Junior</h3></a>
+				</div>
+
+				<div id="navbar">
+					<div class="caixaLogo hidden-xs">
+						<a  href="../index.html"><img class="caixaImagemLogo" src="../assets/img/logo.png" width="75"></a>
 					</div>
-				</nav>
+				 	<ul class="nav navbar-nav navbar-right">
+				   		<li><a href="../index.html">Home</a></li>
+				   		<li><a href="../sobre/index.html">Sobre</a></li>
+			    		<li class="active"><a href="index.html">Equipe</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="caixaHeader">
-				<h1>EQUIPE</h1>
-				<h4>Conheça nossa alcateia. AUUUUU</h4>
+		</nav>
+		<header>
+			<div class="transparenciaHeader">
+				<div class="caixaHeader">
+					<h1>A ALCATEIA</h1>
+				</div>
 			</div>
 		</header>
 		<div class="linha"></div>
@@ -33,7 +38,7 @@
 		<!-- INICIO DA SESSÃO -->
 		<section id="equipes">
 			<!-- INICIO DA SESSÃO DE PRESIDENCIA -->
-			<article class="sessaoEquipes">
+			<article class="sessao">
 				<h2>Diretoria de Presidência</h2>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
