--- a/sobre/index.html
+++ b/sobre/index.html
@@ -7,11 +7,30 @@
 	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 </head>
 <body>
+	<nav class="navbar navbar-default navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a href="../index.html" class="navbar-brand"><h3>IN Junior</h3></a>
+			</div>
+
+			<div id="navbar">
+				<div class="caixaLogo hidden-xs">
+					<a href="../index.html"><img class="caixaImagemLogo" src="../assets/img/logo.png" width="75"></a>
+				</div>
+			 	<ul class="nav navbar-nav navbar-right">
+			   		<li><a href="../index.html">Home</a></li>
+			   		<li class="active"><a href="index.html">Sobre</a></li>
+		    		<li><a href="../equipe/index.html">Equipe</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<header>
 		<header>
-			<div class="caixaHeader">
-				<h1>SOBRE</h1>
-				<h4>Sob.</h4>
+			<div class="transparenciaHeader">
+				<div class="caixaHeader">
+					<h1>QUEM SOMOS</h1>
+				</div>
 			</div>
 		</header>
 	</header>
@@ -67,21 +86,6 @@
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
 		</div>
-	</div>
-
-	<div class="menu">
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<div class="navbar-header">
-	    			<a class="navbar-brand nomeLogo" href="../index.html"><img src="../assets/img/logo.png" width="50"></a>
-				</div>
-		    	<ul class="nav navbar-nav navbar-right">
-			    	<li><a href="../index.html">Home</a></li>
-			    	<li class="active"><a href="index.html">Sobre</a></li>
-		    		<li><a href="../equipe/index.html">Equipe</a></li>
-				</ul>
-			</div>
-		</nav>
 	</div>
 </body>
 </html>
