--- a/equipe/index.html
+++ b/equipe/index.html
@@ -36,6 +36,9 @@
 		<div class="linha"></div>
 
 		<!-- INICIO DA SESSÃO -->
+		<div class="titulo">
+			<h2>DIRETORIAS</h2>
+		</div>
 		<section id="equipes">
 			<!-- INICIO DA SESSÃO DE PRESIDENCIA -->
 			<article class="sessao">
@@ -43,11 +46,12 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Presidente</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
-					<h4>Presidente</h4>
+					<h4>Assessor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
@@ -63,11 +67,12 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Diretor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
-					<h4>Gerente</h4>
+					<h4>Assessor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
@@ -83,11 +88,12 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Diretor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
-					<h4>Gerente</h4>
+					<h4>Assessor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
@@ -103,11 +109,12 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
+					<h4>Diretor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
 					<h3>Matheus Martins</h3>
-					<h4>Gerente</h4>
+					<h4>Assessor</h4>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<img src="../assets/img/presida.jpg" class="rosto" />
@@ -117,6 +124,26 @@
 			</article>
 			<div class="linha"></div>
 
+			<!-- INICIO DA SESSÃO DE FINANCEIRO -->
+			<article class="sessao">
+				<h2>Diretoria de Financeiro</h2>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+					<h4>Diretor</h4>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<img src="../assets/img/presida.jpg" class="rosto" />
+					<h3>Matheus Martins</h3>
+					<h4>Assessor</h4>
+				</div>
+			</article>
+			<div class="linha"></div>
 		</section>
 		<div class="linha"></div>
 		
