--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 				</div>
 			</div>
 		</nav>
-		
-
 
 		<header id="headerHome">
 			<div class="transparenciaHeader">
@@ -71,8 +69,94 @@
 			<div class="linha"></div>
 		</section>
 		<div class="linha"></div>
-		
-
+		<section id="pqJunior">
+			<div class="barraSessao">
+				<h2>POR QUE UMA JÚNIOR?</h2>
+			</div>
+			<div class="col-md-5 col-xs-12">
+				<div><img class="circular" src="assets/img/duvida.jpeg"></div>
+			</div>
+			<div class="col-md-7 col-xs-12 resposta">
+				<h3>O que é uma empresa Júnior?</h3>
+				<p>Uma Empresa Júnior é formada por universitários selecionados com perfil empreendedor, movidos por um ideal, trabalhando na busca e desenvolvimento de soluções de problemas enfrentadas por empresas do mercado sob a orientação de professores especializados em suas áreas de atuação.</p>
+			</div>
+			
+			<div class="linha"></div>
+			<div class="barraSessao">
+				<h2>VANTAGENS</h2>
+			</div>
+			<div class="linha"></div>
+			<div class="galeria">
+				<div class="col-md-4 col-xs-12">
+					<img class="circular" src="assets/img/mike2.gif">
+					<h3>Garantia de qualidade do serviço</h3>
+					<p>A empresa júnior está inserida em um ambiente acadêmico e conta com a orientação de professores especialistas na área em que a mesma presta serviços, desta maneira, assegura-se a eficácia de seus projetos</p>
+					<div class="separacao hidden-md hidden-lg hidden-xl"></div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<img class="circular" src="assets/img/economia.jpg">
+					<h3>Baixo custo</h3>
+					<p>Os membros de uma empresa júnior não possuem salário, desta maneira, não há acréscimo de custo para fins de lucro, visto que gerar conhecimento é o principal objetivo dos consultores juniores</p>
+					<div class="separacao hidden-md hidden-lg hidden-xl"></div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<img class="circular" src="assets/img/adaptacao.jpg">
+					<h3>Projetos personalizados</h3>
+					<p>A empresa júnior adapta seus serviços às necessidades do cliente, criando oportunidades para que pequenos e micro empresários também possam usufruir de consultorias de qualidade</p>
+				</div>
+				<div class="linha separacao"></div>
+				<div class="col-md-1 col-xs-12"></div>
+				<div class="col-md-5 col-xs-12">
+					<img class="circular" src="assets/img/flexibilidade.jpeg">
+					<h3>Responsabilidade social</h3>
+					<p>Ao contratar uma empresa júnior, o empresário está fomentando a geração de conhecimento na sociedade e no meio acadêmico, que pode se refletir em novas tecnologias que virão a lhe beneficiar depois, o empresário júnior possui um perfil empreendedor e engajado em transformar o meio em que ele está inserido</p>
+					<div class="separacao hidden-md hidden-lg hidden-xl"></div>
+				</div>
+				<div class="col-md-5 col-xs-12">
+					<img class="circular" src="assets/img/agilidade.jpg">
+					<h3>Agilidade na realização de projetos</h3>
+					<p>A forma dinâmica em como uma empresa júnior está estruturada a torna praticamente livre de burocracias, o que concede rapidez na aplicação dos projetos.</p>
+				</div>
+				<div class="col-md-1 col-xs-12"></div>
+			</div>
+			<div class="linha"></div>
+		</section>
+		<section id="portfolio">
+			<div class="barraSessao">
+				<h2>PORTFOLIO</h2>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="brilha portfolioPic">
+	  				<a href="http://www.insightjunior.com.br/" target="_blank"><img src="assets/img/portfolio/insight.png" alt="insight"></a>
+				</div>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="brilha portfolioPic">
+	  				<a href="http://dgrcontabilidade.com.br/" target="_blank"><img src="assets/img/portfolio/dgr.png" alt="dgr"></a>
+				</div>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="brilha portfolioPic">
+	  				<a href="http://expresseconsultoria.com.br/index.php" target="_blank"><img src="assets/img/portfolio/expresse.png" alt="expresse!"></a>
+				</div>
+			</div>
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="brilha portfolioPic">
+	  				<a href="http://www2.ic.uff.br/~medialab/" target="_blank"><img src="assets/img/portfolio/medialab.png" alt="media lab"></a>
+				</div>
+			</div>
+		</section>
+		<div class="linha"></div>
+		<section id="contactar">
+			<a href="equipe/index.html#rodape">
+				<div id="fundoContactar">
+					<div class="texto">
+						<h3>Marque com a gente!</h3>
+					</div>	
+				</div>
+			</a>
+		</section>
+		<div class="linha"></div>
 		<div class="rights">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<h4>© IN Junior. All rights reserved. Design by André Luiz & Pedro Mello.</h4>
