--- a/equipe/index.html
+++ b/equipe/index.html
@@ -173,15 +173,18 @@
 			</div>
 			<div class="linha"></div>
 
-			<!-- LOGOS DA IN, IC e UFF -->
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<!-- LOGOS DA IN, IC, UFF E LINK FACEBOOK -->
+			<div class="col-xs-12 col-sm-12 col-md-3">
 				<img src="../assets/img/uff_logo.png" class="logo" />
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-3">
 				<img src="../assets/img/logo.png" class="logo" />
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-3">
 				<img src="../assets/img/logo-ic.png" class="logo" />
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-3">
+				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finjunioruff&tabs&width=180&height=230&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="180" height="230" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" class="facebook"></iframe>
 			</div>
 			<div class="linha"></div>
 		</footer>
